k8s/task24/other-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: other
  labels:
    app: other
spec:
  replicas: 1
  selector:
    matchLabels:
      app: other
  template:
    metadata:
      labels:
        app: other
    spec:
      containers:
      - name: other
        image: nginx:stable
        ports:
          - containerPort: 80
